--- a/readme.html
+++ b/readme.html
@@ -1,42 +1,93 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<head><h1>Sales-Data-Visualization</head></h1></head>
+<head>
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Sales data visualisation</title>
+
+     <!-- CSS file -->
+     <link rel="stylesheet" href="styles.css">
+
+     <!-- Google fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Alkalami&display=swap" rel="stylesheet">
+</head>
+
+
 <body>
-     <title></title>
+     <div class="hero-section">
+          <h1>Sales-Data-Visulization</h1>
+     </div>
 
-<br> <br>
-<h1> Which products sold most ? </h1>
-<img src="/Visuals/Product_Pie.png" alt="">
-<br>
-<h3> So we can see from the Pie Chart that Prawns is the most popular product in our inventory <br>
-     possesing about 29.8 % of the total sales ,while Beef is not to far from Prawns it also contributes to 27.2% of total sales</h3>
-<br><br>
-<h1> Which cities ordered most ?</h1>
-<img src="/Visuals/Place_pie.png" alt="">
-<br>
-<h3>It is clear evident that Malappuram ordered most  with 16.5 % of total sales while Thrissur and Kochi  ordered least with 5.5% individual contribution on total sales </h3>
-<br><br>
-<h1>Which products are sold least ?</h1>
-<img src="/Visuals/Least_bar.png" alt="">
-<br>
-<h3>As we can see , the least 5 sales products are Kadumanda ,Dates, Dry Fruits,Lemons and Fish  </h3>
-<br>
+     <div class="most-sold-products">
+          <h1> Which products sold most ? </h1>
+          <img class="image" src="Visuals/Product_Pie.png" alt="">
+          <br>
+          <h3> So we can see from the Pie Chart that Prawns is the most popular product in our inventory <br>
+               possesing about 29.8 % of the total sales ,while Beef is not to far from Prawns it also contributes to
+               27.2%
+               of total sales</h3>
+          <br><br>
+     </div>
 
-<h1>What is the pattern of Sales month-wise</h1>
-<img src="Visuals/Month_Day_Line.png" alt=""> <br> <br><br>
-<img src="/Visuals/Month_pie.png" alt="">
-<h3>
-     It can be observed that :- <br>
-     1- Data involves only 4 months - April , May , June and July <br>
-     2- April month has the most number of sales with contributing to 35.6 % of total sales  <br>
-     3- It is also observed that as sales decreases as the month increases , the last month - July , has the least number of sales <br>
-</h3>
-<br><br>
-<h1>Which days of the months are most favourable for orders</h1>
-<img src="/Visuals/Day_Bar.png" alt="">
-<br>
-<img src="/Visuals/Day_COunt.png" alt=""><br>
-<h3> The 19th and 21st of each month are somewhat more favoured by people , either can be due to discounts or other offers on that days</h3>
-<br><br>
-<h1>These are the observations that are observed by me , but there is much more possibility to gain other insights from this <br> data 
-like , we can analyse dates wth products to observe are there any products that are sold together ? Is there any effect of months on type of products sold ? Like people tends to buy cold things on hot days and hot things on cold days <br></h1>
+     <div class="most-ordered-cities">
+          <h1> Which cities ordered most ?</h1>
+          <img class="image" src="Visuals/Place_pie.png" alt="">
+          <br>
+          <h3>It is clear evident that Malappuram ordered most with 16.5 % of total sales while Thrissur and Kochi
+               ordered
+               least with 5.5% individual contribution on total sales </h3>
+          <br><br>
+     </div>
+
+     <div class="least-sold-products">
+          <h1>Which products are sold least ?</h1>
+          <img class="image" src="Visuals/Least_bar.png" alt="">
+          <br>
+          <h3>As we can see , the least 5 sales products are Kadumanda ,Dates, Dry Fruits,Lemons and Fish </h3>
+          <br>
+     </div>
+
+
+     <div class="sales-pattern">
+          <h1>What is the pattern of Sales month-wise</h1>
+          <img class="image" src="Visuals/Month_Day_Line.png" alt=""> <br> <br><br>
+          <img class="image" src="Visuals/Month_pie.png" alt="">
+          <h3>
+               It can be observed that :-
+               <ol>
+                    <li>Data involves only 4 months - April , May , June and July.</li>
+                    <li>April month has the most number of sales with contributing to 35.6 % of total sales.</li>
+                    <li>It is also observed that as sales decreases as the month increases , the last month - July , has
+                         the least number of sales.</li>
+
+               </ol>
+
+          </h3>
+          <br><br>
+     </div>
+
+     <div class="most-favourable-months">
+          <h1>Which days of the months are most favourable for orders ?</h1>
+          <img class="image" src="Visuals/Day_Bar.png" alt="">
+          <br>
+          <img class="image" src="Visuals/Day_COunt.png" alt=""><br>
+          <h3> The 19th and 21st of each month are somewhat more favoured by people , either can be due to discounts or
+               other
+               offers on that days</h3>
+          <br><br>
+
+          <h2 style="text-align : center">My intincts & Further Possibilities</h2>
+          <p>These are the observations that are observed by me , but there is much more possibility to gain other
+               insights
+               from this <br> data
+               like , we can analyse dates wth products to observe are there any products that are sold together ? Is
+               there
+               any effect of months on type of products sold ? Like people tends to buy cold things on hot days and hot
+               things on cold days <br></p>
+     </div>
+
 </body>
